# IoT_Therm_Hum_Sensor

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  DHT22.c  DHT22.h  app_nvs.c  app_nvs.h  http_server.c  http_server.h  main.c  rgb_led.c  rgb_led.h  sntp_time_sync.c  sntp_time_sync.h  task_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/webpage/: app.css  app.js  index.html
